# omero-parade2

./: .gitignore  MANIFEST.in  README.md  deploy_build.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
omero_parade2/: urls.py  views.py
omero_parade2/templates/omero_parade2/: index.html
public/: style.css
src/: AddPlot.jsx  App.css  App.jsx  BarChart.jsx  FooterTable.jsx  Histogram.jsx  Mosaic.jsx  MosaicCount.jsx  NavBar.jsx  OmeSpinner.jsx  PlotPopover.jsx  ScatterPlot.jsx  SidePanel.jsx  TableChooser.jsx  Thumbnail.jsx  Thumbnails.jsx  index.css  utils.js
test/integration/: test_index.py
